# fitam

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  dodo.py  pyproject.toml  pyrightconfig.json
notebooks/: odometry_noise_dataset_creation.ipynb  spatial_label_propagation.ipynb
results/configs/: classification_dataset_config.json  compute_config.json  env_config.json  evaluation_config.json  evaluation_config_ablation.json  logging_config.json  train_config_dino_classification.json
results/configs/simulated_radial_configs/: baseline_radial_map_config.json  create_configs.py  long_range_radial_map_config.json  perfect_vision_radial_map_config.json  spatial_label_radial_map_config.json
scripts/: make_spatial_label_swath_library.py
src/fitam/: __init__.py
src/fitam/core/: common.py  data_tools.py  product_structures.py
src/fitam/evaluation/: eval_data_structures.py  eval_movement.py  eval_observation.py  eval_save_inputs.py  eval_utils.py  planner_trial_opengl.py  spatial_label_observation.py
src/fitam/generation/: dataset_blueprints.py  dataset_generation.py  limited_overhead.py  split_image_request_by_time.py
src/fitam/learning/: bin_ensemble_torch.py  cnn_model_ablation_torch.py  dino_model.py  dino_model_torch.py  ensemble_training.py  fully_separate_ensemble.py  fully_separate_ensemble_torch.py  img_sim_dataloader.py  load_by_name.py  network_training.py  pl_img_dataloader.py  preprocessing_transforms.py  reduce_space_to_cost.py  spatial_label_training.py
src/fitam/mapping/: belief.py  costmap.py  costmap_swath_library.py  (+11 more)
(+34 files in other folders)
