[project]
name = "fitam"
version = "0.1.0"
description = "FITAM"
authors = [
    {name = "Ethan Fahnestock", email = "ekf@mit.edu"},
]
dependencies = [
    "pip>=24.0",
    "numpy>=1.26.4",
    "jsonpickle>=3.0.3",
    "plotly>=5.20.0",
    "fury==0.8.0",
    "PyQt6>=6.6.1",
    "doit>=0.36.0",
    "dash>=2.16.1",
    "diskcache>=5.6.3",
    "dstar-lite @ git+https://github.com/efahnestock/dstar-lite-python.git",
    "pyastar2d @ git+https://github.com/efahnestock/pyastar2d.git",
    "nbstripout>=0.7.1",
    "tensorboard>=2.16.2",
    "open3d>=0.18.0",
    "xFormers>=0.0.26.post1",
    "scalene>=1.5.19",
    "h5py>=3.11.0",
    "seaborn>=0.13.2",
    "vtk @ file:///software/VTK-modified-pano/build",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "opencv-python>=4.10.0.84",
    "tomli>=2.0.1",
    "setuptools==69.2.0",
    "pytorch-lightning>=2.2.0",
    "jupyter>=1.1.1",
]
requires-python = "<3.12,>=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
